unpackaged/main/default/objects/Special_Offer__c/Special_Offer__c.object-meta.xml
<CustomObject>
    <label>Special Offer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>