unpackaged/main/default/objects/Special_Offer__c/fields/Banner_Special__c.field-meta.xml
<CustomField>
        <fullName>Banner_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banner Special</label>
        <type>Checkbox</type>
    </CustomField>