unpackaged/main/default/objects/Special_Offer__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </CustomField>