unpackaged/main/default/objects/Special_Offer__c/fields/Subdivision__c.field-meta.xml
<CustomField>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subdivision</label>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Special Offers</relationshipLabel>
        <relationshipName>Special_Offers</relationshipName>
        <type>Lookup</type>
    </CustomField>